--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,9 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <!--<listener>-->
+        <!--<listener-class>com.jhuniversity.crm.web.listener.SysInitListener</listener-class>-->
+    <!--</listener>-->
     <!--注册字符集过滤器-->
     <filter>
         <filter-name>characterEncodingFilter</filter-name>
